--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -153,7 +153,7 @@
                      alt="Make Safety Training Happen" title="NYC Construction Safety Training (PdhSafety.com)"
                      class="img-fluid" />
                </a>
-              <span class="mr-auto top-logo-tagline d-none d-md-none d-lg-block d-xl-block">Make Safety
+               <span class="mr-auto top-logo-tagline d-none d-md-none d-lg-block d-xl-block">Make Safety
                   Training
                   Happen</span>
 
@@ -304,8 +304,8 @@
             <div class="col text-center">
                <img title="IACET Accredited" class="lazy img-fluid" data-src="{% static 'images/iacet_349.png' %}"
                   alt="IACET Accredited" />
-               <img title="Money back guarantee" class="lazy img-fluid" data-src="{% static 'images/money_back.png' %}"
-                  width="400" height="293" alt="money back" />
+               {% comment %} <img title="Money back guarantee" class="lazy img-fluid" data-src="{% static 'images/money_back.png' %}"
+                  width="400" height="293" alt="money back" /> {% endcomment %}
             </div>
          </div>
       </div>
